--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
     --main-color-task_4-img: #f994373d;
     --main-color-task_4-bg: #e98e38;
     --main-color-task_5-img: #306FCC;
-    --main-color-task_5-bg: #61bbfc;
+    --main-color-task_5-bg: #61bbfc4e;
     --main-color-task_6-img: #33ce30;
-    --main-color-task_6-bg: #a2e8a2; 
+    --main-color-task_6-bg: #a2e8a26c; 
 }
 
 /* Color Palette */
@@ -46,7 +46,8 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-    box-shadow: -1px 4px 28px 6px rgba(0,0,0,0.201)
+    box-shadow: -1px 4px 28px 6px rgba(0,0,0,0.201);
+    position: relative;
 }
 
 ._container_todo_list {
@@ -81,12 +82,11 @@ body {
 /* Stylist for list wrap */
 
 .list_wrap > .action_ {
-    margin-top: 5px;
+    margin-top: 7px;
 }
 
 .action_ {
     display: flex;
-    justify-content: flex-start;
     background-color: rgb(239, 236, 236);
     border-radius: 15px;
     position: relative;
@@ -151,12 +151,12 @@ img {
     cursor: pointer;
 }
 
-.mark {
+.action_ > .mark {
     position:absolute;
     height: 20px;
     width: 20px;
     top: 15px;
-    left: 300px;
+    left: 270px;
 }
 
 /* Stylist Action 2 */
@@ -221,3 +221,60 @@ img {
 
 
 /* Stylist Action 4 */
+
+/* Stylist Action 5 */
+
+.task_5 {
+    margin-left: 50px;
+    color: #0d4f8c;
+}
+
+.sqrt-bg_5 {
+    position: absolute;
+    display: flex;
+    top: 20px;
+    left: 10px;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    height: 18px;
+    width: 18px;
+    border-radius: 18%;
+    background-color: var(--main-color-task_5-img);
+}
+
+._five {
+    background-color: var(--main-color-task_5-bg);
+}
+
+.check {
+    height: 20px;
+    width: 20px;
+}
+
+/* Stylist Action 5 */
+
+/* Stylist Action 6 */
+
+._six {
+    background-color: var(--main-color-task_6-bg);
+}
+
+.task_6 {
+    margin-left: 50px;
+    color: #2b5c2b;
+}
+
+.sqrt-bg_6 {
+    position: absolute;
+    display: flex;
+    top: 10px;
+    left: 10px;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    height: 18px;
+    width: 18px;
+    border-radius: 18%;
+    background-color: var(--main-color-task_6-img);
+}
