--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    overflow: scroll;
 }
 
 /* Stylist for body element */
@@ -47,7 +48,6 @@ body {
     align-items: center;
     border-radius: 20px;
     box-shadow: -1px 4px 28px 6px rgba(0,0,0,0.201);
-    position: relative;
 }
 
 ._container_todo_list {
@@ -58,6 +58,10 @@ body {
     margin-top: -25px;
     font-size: 1rem;
     color: gray;
+}
+
+.list_wrap {
+    position: relative;
 }
 
 .header>h1 {
@@ -72,7 +76,7 @@ body {
     background-color: gray;
 }
 
-.section_title>h2 {
+.section_title > h2 {
     font-size: 1.2rem;
     color: gray;
 }
@@ -81,15 +85,13 @@ body {
 
 /* Stylist for list wrap */
 
-.list_wrap > .action_ {
-    margin-top: 7px;
-}
 
 .action_ {
     display: flex;
-    background-color: rgb(239, 236, 236);
+    background-color: rgba(125, 125, 125, 0.263);
     border-radius: 15px;
     position: relative;
+    margin-top: 7px;
 }
 
 /* Stylist for list wrap */
@@ -128,6 +130,10 @@ img {
 
 /* Stylist Action 2 */
 
+._two {
+    position: relative;
+}
+
 .task_2 {
     margin-left: 50px;
 }
@@ -143,7 +149,7 @@ img {
     height: 15px;
     width: 15px;
     border-radius: 18%;
-    background-color: rgb(195, 195, 195);
+    background-color: rgb(195, 195, 195)
 }
 
 .sqrt-bg_2:hover {
@@ -151,13 +157,35 @@ img {
     cursor: pointer;
 }
 
-.action_ > .mark {
-    position:absolute;
+._two > .mark {
+    position: absolute;
     height: 20px;
     width: 20px;
     top: 15px;
     left: 270px;
 }
+
+@media screen and (min-width: 400px) {
+    ._two > .mark {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        top: 15px;
+        left: 270px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    ._two > .mark {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        top: 15px;
+        left: 240px;
+    }
+}
+
+
 
 /* Stylist Action 2 */
 
